--- a/sync/kitty.conf
+++ b/sync/kitty.conf
@@ -1,5 +1,5 @@
+# RELOAD CONFIG WITH: ⌃+⌘+, 
 # vim:fileencoding=utf-8:foldmethod=marker
-
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
@@ -7,6 +7,7 @@
 #: characters.
 
 font_family      BitstromWera Nerd Font
+#font_family      Courier New
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -1251,8 +1252,7 @@ font_size 16.0
 #: whatever shell is set as the default shell for the current user.
 #: Note that on macOS if you change this, you might need to add
 #: --login and --interactive to ensure that the shell starts in
-#: interactive mode and reads its startup rc files. Environment
-#: variables are expanded in this setting.
+#: interactive mode and reads its startup rc files.
 
 # editor .
 
@@ -1295,7 +1295,7 @@ font_size 16.0
 
 #: To get a list of available actions, run::
 
-#:     kitten @ --help
+#:     kitty @ --help
 
 #: A set of actions to be allowed when no password is sent can be
 #: specified by using an empty password. For example::
@@ -1466,7 +1466,7 @@ font_size 16.0
 #: disabled to turn off shell integration, completely. It is also
 #: possible to disable individual features, set to a space separated
 #: list of these values: no-rc, no-cursor, no-title, no-cwd, no-
-#: prompt-mark, no-complete, no-sudo. See Shell integration
+#: prompt-mark, no-complete. See Shell integration
 #: <https://sw.kovidgoyal.net/kitty/shell-integration/> for details.
 
 # allow_cloning ask
@@ -2359,7 +2359,7 @@ font_size 16.0
 #::  Quoting.html> so you can use escapes like \e to send control
 #::  codes or \u21fb to send Unicode characters (or you can just input
 #::  the Unicode characters directly as UTF-8 text). You can use
-#::  `kitten show_key` to get the key escape codes you want to
+#::  `kitty +kitten show_key` to get the key escape codes you want to
 #::  emulate.
 
 #::  The first argument to send_text is the keyboard modes in which to
